# courswork_spring_2025

./: .coverage  .env  .flake8  .gitignore  README.md  h origin main  pyproject.toml  pytest.ini  requirements.txt
src/: external_api.py  generators.py  invest_savings.py  main.py  masks.py  reports.py  utils.py  views.py  widget.py
src/decorators/: log.py
src/file_parsers/: csv_parser.py  excel_parser.py
src/processing/: __init__.py
src/processing.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: __init__.py  test_csv_parser.py  test_decorator.py  test_excel_parser.py  test_external_api.py  test_filter_by_currency.py  test_invest_savings.py  test_main.py  test_masks.py  test_processing.py  test_reports.py  test_utils.py  test_views.py  test_widget.py
