[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pythonproject4"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 120
ignore = "E203,W503,E501,W292"